--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,48 +1,42 @@
-name: CI
+name: HAI tech Task CI Pipeline
 
-on: [push]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
+  build:
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [3.8, 3.9]
+        poetry-version: [1.1.4]
 
-  test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
+    - uses: actions/checkout@v2
 
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.9
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
 
-      - name: Install Poetry
-        uses: dschep/install-poetry-action@v1.3
+    - name: Install poetry ${{ matrix.poetry-version }}
+      run: |
+        python -m ensurepip
+        python -m pip install --upgrade pip
+        python -m pip install poetry==${{ matrix.poetry-version }}
 
-      - name: Cache Poetry virtualenv
-        uses: actions/cache@v1
-        id: cache
-        with:
-          path: ~/.virtualenvs
-          key: poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: |
-            poetry-${{ hashFiles('**/poetry.lock') }}
+    - name: View poetry --help
+      run: poetry --help
 
-      - name: Set Poetry config
-        run: |
-          poetry config settings.virtualenvs.in-project false
-          poetry config settings.virtualenvs.path ~/.virtualenvs
+    - name: Install dependencies
+      shell: bash
+      run: python -m poetry install
 
-      - name: Install Dependencies
-        run: poetry install
-        if: steps.cache.outputs.cache-hit != 'true'
-
-      - name: Code Quality
-        run: poetry run black . --check
-
-      - name: Test with pytest
-        # env:
-        #   DJANGO_SETTINGS_MODULE: project.settings
-        #   SECRETS_FILE: .confidential/ci.json
-        run: poetry run pytest --cov . -n 2
+    - name: Test with pytest
+      run: |
+        python -m poetry run python -m pytest -v tests
