--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,6 +37,8 @@ jobs:
       shell: bash
       run: python -m poetry install
 
-    - name: Test with pytest
+    - name: Test with pytest & build coverage file
       run: |
-        python -m poetry run python -m pytest -v tests
+        python -m poetry run python -m pytest --cache-clear --cov=app test/ > pytest-coverage.txt
+    - name: Comment coverage on PR
+      uses: coroo/pytest-coverage-commentator@v1.0.2
