--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["Elmi de Lange"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+fire = "^0.4.0"
+pytest-cov = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
