--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ black = "^22.1.0"
 pytest = "^7.1.1"
 pytest-cov = "^3.0.0"
 pytest-xdist = "^2.5.0"
+commitizen = "^2.21.2"
+pre-commit = "^2.17.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
