--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ pytest-cov = "^3.0.0"
 pytest-xdist = "^2.5.0"
 commitizen = "^2.21.2"
 pre-commit = "^2.17.0"
+pylint = "^2.13.0"
+mypy = "^0.942"
+sphinx-rtd-theme = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
