--- a/.github/workflows/1_tests.yml
+++ b/.github/workflows/1_tests.yml
@@ -14,6 +14,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         python-version: ['3.7', '3.8', '3.9', '3.10']
+        poetry-version: [1.1.4]
         include:
           - os: windows-latest
             python-version: '3.7'
