--- a/.github/workflows/3_linting.yml
+++ b/.github/workflows/3_linting.yml
@@ -13,7 +13,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.7']
+        python-version: [3.8]
+        poetry-version: [1.1.4]
     env:
       OS: ${{ matrix.os }}
       PYTHON: ${{ matrix.python-version }}
