--- a/.github/workflows/2_coverage.yml
+++ b/.github/workflows/2_coverage.yml
@@ -13,8 +13,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: [3.8]
-        poetry-version: [1.1.4]
+        python-version: ['3.9']
+        poetry-version: ['1.1.13']
     env:
       OS: ${{ matrix.os }}
       PYTHON: ${{ matrix.python-version }}
