ci: Fixed coverage test and python compatibilities

--- a/.github/workflows/2_coverage.yml
+++ b/.github/workflows/2_coverage.yml
@@ -41,7 +41,7 @@ jobs:
 
     - name: Generate coverage report
       run: |
-        python -m poetry run python -m pytest --cache-clear --cov=app tests/ > pytest-coverage.txt
+        python -m poetry run python -m pytest --cache-clear --cov=dates tests/ > pytest-coverage.txt
 
     - name: Comment coverage on PR
       uses: coroo/pytest-coverage-commentator@v1.0.2
