--- a/.github/workflows/1_test.yml
+++ b/.github/workflows/1_test.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: Continuous Integration Pipeline
 
 on:
   push:
@@ -13,14 +13,14 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.7', '3.8', '3.9', '3.10']
+        python-version: ['3.8', '3.9', '3.10']
         poetry-version: ['1.1.13']
         include:
           - os: windows-latest
-            python-version: '3.7'
+            python-version: '3.8'
             poetry-version: '1.1.13'
           - os: macos-latest
-            python-version: '3.7'
+            python-version: '3.8'
             poetry-version: '1.1.13'
 
     timeout-minutes: 10
