--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         python-version: [3.8]
-        poetry-version: [1.1.4]
+        poetry-version: ['1.1.13']
     env:
       OS: ${{ matrix.os }}
       PYTHON: ${{ matrix.python-version }}
