--- a/ci.yaml
+++ b/ci.yaml
@@ -1,23 +1,68 @@
-name: HAI tech Task CI Pipeline
+name: Continuous Integration Pipeline
 
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
 
 jobs:
-  build:
+  test:
+    runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
       matrix:
-        python-version: [3.8]
-        poetry-version: [1.1.4]
+        os: [ubuntu-latest]
+        python-version: ['3.8', '3.9', '3.10']
+        poetry-version: ['1.1.13']
+        include:
+          - os: windows-latest
+            python-version: '3.8'
+            poetry-version: '1.1.13'
+          - os: macos-latest
+            python-version: '3.8'
+            poetry-version: '1.1.13'
 
-    runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Check out code repository
+      uses: actions/checkout@v2
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install dependencies and package
+      run: |
+        python -m ensurepip
+        python -m pip install --upgrade pip
+        python -m pip install poetry==${{ matrix.poetry-version }}
+
+    - name: Install dependencies
+      shell: bash
+      run: python -m poetry install
+
+    - name: Test with pytest
+      run: |
+        python -m poetry run python -m pytest
+
+  coverage:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        python-version: ['3.9']
+        poetry-version: ['1.1.13']
+    env:
+      OS: ${{ matrix.os }}
+      PYTHON: ${{ matrix.python-version }}
+    timeout-minutes: 10
+
+    steps:
+    - name: Check out code repository
+      uses: actions/checkout@v2
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
@@ -34,19 +79,51 @@ jobs:
       shell: bash
       run: python -m poetry install
 
-    - name: Test with pytest & build coverage file
+    - name: Generate coverage report
       run: |
-        python -m poetry run python -m pytest --cache-clear --cov=app tests/ > pytest-coverage.txt
+        python -m poetry run python -m pytest --cache-clear --cov=dates tests/ > pytest-coverage.txt
 
     - name: Comment coverage on PR
       uses: coroo/pytest-coverage-commentator@v1.0.2
 
-    - name: Build and publish to pypi
-      uses: JRubics/poetry-publish@v1.10
+  lint:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        python-version: ['3.9']
+        poetry-version: ['1.1.13']
+    env:
+      OS: ${{ matrix.os }}
+      PYTHON: ${{ matrix.python-version }}
+    timeout-minutes: 10
+
+    steps:
+    - name: Check out code repository
+      uses: actions/checkout@v2
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
       with:
-        pypi_token: ${{ secrets.PYPI_TEST_TOKEN }}
-        repository_name: "testpypi"
-        repository_url: "https://test.pypi.org/legacy/"
-        ignore_dev_requirements: "yes"
-        python_version: "${{ matrix.python-version }}"
-        poetry_version: "==${{ matrix.poetry-version }}"
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install poetry ${{ matrix.poetry-version }}
+      run: |
+        python -m ensurepip
+        python -m pip install --upgrade pip
+        python -m pip install poetry==${{ matrix.poetry-version }}
+
+    - name: Install dependencies
+      shell: bash
+      run: python -m poetry install
+
+    - name: Lint with pylint
+      run: |
+        poetry run pylint dates
+
+    - name: Run Black check
+      uses: psf/black@stable
+
+    - name: Check type hints with mypy
+      run: |
+        poetry run mypy --strict dates
