--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,9 +52,17 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           semantic-release publish
+
+  Publish:
+    needs: Release
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message, 'chore(release):')
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
       - name: Checkout code
         uses: actions/checkout@v2
-        run: git pull origin main
       - name: Build and publish to pypi
         uses: JRubics/poetry-publish@v1.10
         with:
