fix: Force pulling the latest semantic release in CI Publish pipline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,8 @@ jobs:
           python-version: 3.8
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Get latest semantic release
+        run: git pull origin master
       - name: Build and publish to pypi
         uses: JRubics/poetry-publish@v1.10
         with:
