--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Get latest semantic release
-        run: git pull origin master
+        run: git pull origin main
       - name: Build and publish to pypi
         uses: JRubics/poetry-publish@v1.10
         with:
