--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,20 @@ repos:
       rev: 22.1.0
       hooks:
       -   id: black
+          additional_dependencies: ['click==8.0.4']
+
+  - repo: https://github.com/pre-commit/mirrors-pylint
+    rev: v3.0.0a3
+    hooks:
+      - id: pylint
+        exclude: ^tests/
+        args: [--disable=all, --enable=unused-import]
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.902
+    hooks:
+      - id: mypy
+        exclude: ^tests/
+        args: [--strict]
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v2.21.2
     hooks:
